# PeriS

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs  main.rs  peripherals.rs
src/core/: afio.rs  exti.rs  flash.rs  gpio.rs  nvic.rs  pma.rs  rcc.rs  register.rs  usb.rs
src/core/gpio/: gpioa.rs  gpiob.rs  gpioc.rs
src/peripherals/: clock.rs  communication.rs  flash.rs  fprom.rs  gpio.rs  ports.rs  rcc.rs
src/peripherals/clock/: ahb.rs  apb1.rs  apb2.rs  hse.rs  hsi.rs  pll.rs  sys.rs  usb.rs
src/peripherals/communication/: i2c.rs  uart.rs  usb.rs
src/peripherals/communication/i2c/: i2c1.rs
src/peripherals/communication/uart/: usart1.rs
src/peripherals/gpio/: gpioa.rs  gpiob.rs  gpioc.rs  port.rs
src/peripherals/rcc/: clock.rs
src/peripherals/rcc/clock/: ahb.rs  apb1.rs  apb2.rs  hse.rs  hsi.rs  pll.rs  sys.rs
